<resources>

    <!-- Titles for the Activities -->
        <string name="app_name">Kita Finder</string>
        <string name="title_item_list">Kita Finder</string>
        <string name="title_item_detail">Kita Details</string>
        <string name="title_activity_settings">Einstellungen</string>
        <string name="content_authority">com.example.robert.kitafinder</string>
        <string name="search_activity_title">Kita Berlin</string>


    <!-- ****** Search Activity ****** -->

    <!-- Strings for Location entering -->
    <string name="no_location_detected">
            No location detected. Make sure location is enabled on the device.</string>

    <string name="permission_rationale">Standortzugriff wird für die Suche im Umkreis des aktuellen
        Standortes benötigt.</string>
    <string name="permission_denied_explanation">Um den Standort als Suchadress verwenden zu können,
        muss der Standortzugriff zunächst erlaubt werden.</string>
    <string name="settings">Settings</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="accuracy_label">Accuracy</string>

    <!-- Strings for Location entering -->
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!-- Button text -->
    <string name="refresh_loc_button_text">Location aktualisieren</string>
    <string name="refresh_add_button_text">Standort als Adresse</string>
    <string name="search_button_text">Kita finden</string>

    <!-- ****** Result Activity ****** -->

    <!-- DistanceProgressDialogFragment -->
    <string name="dpdf_tag">DistanceProgressDialogFragment</string>

    <!-- Mail Intent -->
    <string name="no_mail_toast">"Die E-Mail Adresse der Kita ist uns nicht bekannt."</string>
    <string name="no_phone_toast">"Die Telefonnummer der Kita ist uns nicht bekannt."</string>
    <string name="mail_subject">Kitaplatz ab August</string>
    <string name="mail_text">Sehr geehrte Damen und Herren,\n\n\n für unser Kind,
        **Name des Kindes**(gebohren am:**Geb. des Kindes**) suchen wir ab August einen Kita Platz.\n\n
        Bitte tragen Sie uns auf Ihre Warteliste ein.\n\n\n Mit freundlichen Grüßen \n\n **Name**
    </string>

    <!-- Favourite Fragment -->
    <string name="status_not_fav">notFav</string>
    <string name="status_fav">fav</string>
    <string name="status_mail_sent">sent</string>
    <string name="status_waiting_list">waitingList</string>
    <string name="status_declined">declined</string>
    <string name="status_approved">approved</string>

    <!-- Filter Fragment -->
    <string name="filter_title_replace">Filter</string>
    <string name="filter_title">Active filters:</string>

    <string name="language_title">Fremdsprache</string>
    <string name="language_disabled_text">egal</string>
    <string name="language_none_text">keine</string>
    <string name="language_sp_text">Spanisch</string>
    <string name="language_en_text">Englisch</string>
    <string name="language_tr_text">Türkisch</string>
    <string name="language_ar_text">Arabisch</string>
    <string name="language_kd_text">Kurdisch</string>
    <string name="language_fr_text">Französisch</string>

    <string name="morning_time">morningTime</string>
    <string name="evening_time">eveningTime</string>
    <string name="opening_hours">openingHours</string>
    <string name="minimum_age">minimumAge</string>
    <string name="language">Language</string>
    <string name="search_radius">searchRadius</string>

    <string-array name="morning_times">
        <item>egal</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
    </string-array>

    <string-array name="evening_times">
        <item>egal</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
    </string-array>

    <string-array name="opening_hours">
        <item></item>
        <item>3 h</item>
        <item>3,5 h</item>
        <item>4 h</item>
        <item>4,5 h</item>
        <item>5 h</item>
        <item>5,5 h</item>
        <item>6 h</item>
        <item>7 h</item>
        <item>7,5 h</item>
        <item>8 h</item>
        <item>8,5 h</item>
        <item>9 h</item>
        <item>9,5 h</item>
        <item>10 h</item>
        <item>10,5 h</item>
        <item>11 h</item>
        <item>11,5 h</item>
        <item>12 h</item>
        <item>12,5 h</item>
        <item>13 h</item>
        <item>13,5 h</item>
        <item>14 h</item>
    </string-array>


    <!-- ****** Menue ****** -->
        <string name="action_settings">Einstellungen</string>

    <!-- ****** Settings ****** -->

    <string name="pref_previously_started_key">pref_previously_started</string>
    <string name="pref_previously_started_summary">Wenn aktiviert, wird die Suchseite beim Start nicht mehr angezeigt.</string>
    <string name="pref_previously_started_title">Suchseite überspringen?</string>

    <string name="pref_address_changed_list">pref_address_changed_list</string>
    <string name="pref_address_changed_map">pref_address_changed_map</string>

    <string name="home_marker">home_marker</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- ****** ContentProvider ****** -->

    <!-- KitaUri -->
    <string name="location_option_all">allKitas</string>
    <string name="location_option_invisible">0</string>
    <string name="location_option_light">1</string>
    <string name="location_option_bold">2</string>
    <string name="location_option_home">3</string>

</resources>
