<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!--<LinearLayout-->
        <!--android:id="@+id/filter_headline"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="70dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:background="@color/colorPrimary">-->

        <!--<ImageView-->
            <!--android:id="@+id/filter_icon"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:padding="12dp"-->
            <!--android:src="@drawable/ic_filter_list_white_24dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:clickable="true"/>-->

        <!--<android.support.design.widget.CoordinatorLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="5">-->

            <!--<TextView-->
                <!--android:id="@+id/filter_fragment_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="4dp"-->
                <!--android:layout_weight="5"-->
                <!--android:text="@string/filter_title"-->
                <!--android:textAlignment="center"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="12dp"-->
                <!--android:layout_gravity="center|top"/>-->

            <!--<TextView-->
                <!--android:id="@+id/filter_fragment_text_replace"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="4dp"-->
                <!--android:layout_weight="5"-->
                <!--android:text="@string/filter_title_replace"-->
                <!--android:textAlignment="center"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="24dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:visibility="gone"/>-->

            <!--<LinearLayout-->
                <!--android:id="@+id/chip_container"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:minHeight="36dp"-->
                <!--android:layout_margin="8dp"-->
                <!--android:background="@color/white"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_gravity="bottom">-->

            <!--</LinearLayout>-->

        <!--</android.support.design.widget.CoordinatorLayout>-->

    <!--</LinearLayout>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mindestaufnahmealter"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:paddingLeft="@dimen/element_horizontal_padding"
        android:paddingRight="@dimen/element_horizontal_padding"
        android:paddingTop="@dimen/element_vertical_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/element_horizontal_padding"
        android:paddingRight="@dimen/element_horizontal_padding"
        android:paddingTop="@dimen/element_vertical_padding"
        android:paddingBottom="@dimen/element_vertical_padding">

        <SeekBar
            android:id="@+id/min_age_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingBottom="12dp"
            android:paddingLeft="42dp"
            android:paddingRight="42dp"
            android:paddingTop="12dp"/>

        <TextView
            android:id="@+id/min_age_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="9 Monate" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />


    <LinearLayout
        android:id="@+id/filter_morning_evening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:paddingLeft="@dimen/element_horizontal_padding"
        android:paddingRight="@dimen/element_horizontal_padding"
        android:paddingTop="@dimen/element_vertical_padding"
        android:paddingBottom="@dimen/element_vertical_padding">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="öffnet spätestens:"
                android:textSize="16dp"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/morning_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="schließt frühstens:"
                android:textSize="16dp"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/evening_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="öffnet täglich für mindestens:"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:paddingLeft="@dimen/element_horizontal_padding"
        android:paddingRight="@dimen/element_horizontal_padding"
        android:paddingTop="@dimen/element_vertical_margin" />

    <LinearLayout
        android:id="@+id/filter_opening_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/element_horizontal_padding"
        android:paddingRight="@dimen/element_horizontal_padding"
        android:paddingTop="@dimen/element_vertical_padding"
        android:paddingBottom="@dimen/element_vertical_padding">

        <SeekBar
            android:id="@+id/opening_hours_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingBottom="12dp"
            android:paddingLeft="42dp"
            android:paddingRight="42dp"
            android:paddingTop="12dp"/>

        <TextView
            android:id="@+id/opening_hours_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="10 Stunden" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_title"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:paddingLeft="@dimen/element_horizontal_padding"
        android:paddingRight="@dimen/element_horizontal_padding"
        android:paddingTop="@dimen/element_vertical_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/language_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/element_horizontal_padding"
            android:paddingRight="@dimen/element_horizontal_padding"
            android:paddingTop="@dimen/element_vertical_padding"
            android:paddingBottom="@dimen/element_vertical_padding">

            <RadioButton android:id="@+id/radio_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_disabled_text"/>

            <RadioButton android:id="@+id/radio_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_none_text"/>

            <RadioButton android:id="@+id/radio_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_en_text"/>

            <RadioButton android:id="@+id/radio_spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_sp_text"/>

        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/language_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/element_horizontal_padding"
            android:paddingRight="@dimen/element_horizontal_padding"
            android:paddingTop="@dimen/element_vertical_padding"
            android:paddingBottom="@dimen/element_vertical_padding">

            <RadioButton android:id="@+id/radio_turkish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_tr_text"/>

            <RadioButton android:id="@+id/radio_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_ar_text"/>

            <RadioButton android:id="@+id/radio_kurd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_kd_text"/>

            <RadioButton android:id="@+id/radio_french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_fr_text"/>

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />


</LinearLayout>
